# djgram

./: .gitattributes  .gitignore  .pre-commit-config.yaml  __init__.py  __main__.py  configs.py  limits.py  pyproject.toml  readme.md  requirements.txt  setup.py  setup_djgram.py  system_configs.py  utils.py
app_template/: admin.py.jinja2
app_template/app/: __init__.py.jinja2  admin.py.jinja2  handlers.py.jinja2  models.py.jinja2
app_template/app/dialogs/: __init__.py.jinja2  callbacks.py.jinja2  dialogs.py.jinja2  getters.py.jinja2  states.py.jinja2
app_template/dialogs/: dialogs.py.jinja2
app_template/init/: .gitignore  configs.py  example.env  main.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
app_template/init/base/: configs.py  example.env  main.py  pyproject.toml  readme.md  requirements.txt
app_template/init/common/: .editorconfig  .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml  requirements-dev.txt
app_template/init/common/migrations/: env.py
app_template/init/full/: .dockerignore  Dockerfile  configs.py  docker-compose.yml  entrypoint.sh  example.env  main.py  pyproject.toml  readme.md  requirements.txt
app_template/init/full/docker/bot/: Dockerfile  entrypoint.sh
app_template/init/full/docker/clickhouse/: init.sql
app_template/init/full/docker/clickhouse/config.d/: logging.xml
app_template/init/full/docker/redis/: .gitignore  aclfile.acl  redis.conf  run.sh
app_template/init/migrations/: env.py
contrib/admin/: __init__.py  action_buttons.py  base.py  filters.py  handlers.py  misc.py  rendering.py
contrib/admin/dialogs/: __init__.py  callbacks.py  dialogs.py  getters.py  states.py  utils.py
contrib/analytics/: __init__.py  apps.py  bot_answer_analytics.py  dialog_analytics.py  local_server.py  middlewares.py  misc.py  utils.py
contrib/analytics/sql/: bot_send_analytics.sql  dialog_analytics.sql  local_server_analytics.sql  update.sql
contrib/auth/: __init__.py  admin.py  apps.py  middlewares.py  models.py  user_model_base.py
contrib/communication/: __init__.py  broadcast.py  handlers.py  utils.py
contrib/dialogs/: __init__.py  database_paginated_scrolling_group.py  utils.py
contrib/forms/: __init__.py  actions.py  autogeneration.py  inputs.py  utils.py  validators.py
contrib/limits/: __init__.py  constants.py  limiter.py  utils.py
contrib/local_server/: __init__.py  constants.py  local_bot.py
contrib/logs/: __init__.py  context.py  extended_colored_formatter.py  middlewares.py
contrib/misc/: __init__.py  handlers.py  middlewares.py  utils.py
contrib/notifications/: __init__.py
contrib/telegram/: __init__.py  admin.py  apps.py  logging_tools.py  middlewares.py  models.py
contrib/telegram/models/: __init__.py  chat.py  chat_full_info.py  misc.py  user.py  user_additional_info.py
db/: __init__.py  base.py  clickhouse.py  ext.py  middlewares.py  models.py  pydantic_field.py  utils.py
db/sqlalchemyv2_nested_mutable/: README.md  __init__.py  _typing.py  mutable.py  trackable.py
db/sqlalchemyv2_nested_mutable/tests/: config.py  conftest.py  utils.py
db/sqlalchemyv2_nested_mutable/tests/integration/: test_custom_sqltype.py  test_mutable_dict.py  test_mutable_list.py  test_mutable_pydantic_type.py  test_sa_default_behaviour.py
docs/: local_bot_api_server.md
utils/: __init__.py  async_tools.py  asynctools.py  diagrams.py  download.py  formating.py  input_file_ext.py  jinja2_postprocessing.py  misc.py  serialization.py  translation.py  upload.py
