[project]
name = "djgram"
version = "0.1.0"
description = "Библиотека для быстрого создания функциональных телеграм ботов"
readme = "readme.md"
authors = [
    { name = "Dmitry", email = "dimasharonov95@yandex.ru" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Aiogram :: 3",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Private :: Do not Upload",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11, <4"
dependencies = [
    "Jinja2~=3.1.5",
    "aiogram-dialog[tools]>=2.0.0,<3.0.0",
    "aiogram~=3.18.0",
    "aiohttp~=3.11.11",
    "asynch[compression]~=0.2.5",
    "cachetools~=5.5.0",
    "clickhouse-cityhash~=1.0.2.4",
    "click~=8.1.8",
    "email-validator~=2.2.0",
    "graphviz~=0.20.3",
    "humanfriendly~=10.0",
    "limiter~=0.5.0",
    "orjson~=3.10.14",
    "phonenumbers==8.13.53",
    "pydantic>=2.0.0,<3.0.0",
    "sqlalchemy-file~=0.6.0",
    "sqlalchemy-utils~=0.41.2",
    "sqlalchemy~=2.0.37",
    "uuid6~=2024.7.10",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[project.urls]
GitHub = "https://github.com/dimon58/djgram"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
# Many copied from default config from documentation https://docs.astral.sh/ruff/configuration/
# Exclude a variety of commonly ignored directories.
exclude = [
    "*.egg-info",
    ".eggs",
    ".git",
    ".idea",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pycache__",
    "__pypackages__",
    "build",
    "dist",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002", "ANN003", "ANN204", "ANN401", "ARG001", "ARG002", "ARG003",
    "D100", "D102", "D103", "D105", "D200", "D202", "D205", "D212", "D415",
    "EM101", "EM102", "INP001", "TRY003",
    "RUF001", "RUF002", "RUF003", "FIX", "TD",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"contrib/*/admin.py" = ["D101", "RUF012"]
"contrib/*/dialogs/callbacks.py" = ["ANN201", "TID252"]
"contrib/*/dialogs/dialogs.py" = ["TID252"]
"contrib/*/dialogs/getters.py" = ["TID252"]
"contrib/*/handlers.py" = ["ANN201"]
# Настройки игнорирования в шаблонах и в djgram оличаются,
# поэтому не удаляем как-бы не нужные noqa
"app_template/**/*.py" = ["RUF100"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 8.
max-complexity = 8

[tool.ruff.lint.isort]
default-section = "third-party"
known-first-party = []
split-on-trailing-comma = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
